testdata/baselines/reference/submodule/conformance/parser519458.errors.txt
parser519458.ts(1,15): error TS2503: Cannot find namespace 'module'.
parser519458.ts(1,21): error TS1005: ';' expected.


==== parser519458.ts (2 errors) ====
    import rect = module("rect"); var bar = new rect.Rect();
                  ~~~~~~
!!! error TS2503: Cannot find namespace 'module'.
                        ~
!!! error TS1005: ';' expected.
    